--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    woi anying
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Website Desa</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <!-- NABVAR -->
+    <div class="content-navbar">
+      <ul class="ul-navbar">
+        <li class="li-navbar">
+          <a href="">Home</a>
+        </li>
+      </ul>
+
+    </div>
+    <!-- NAVBAR END -->
+
+    <!-- CCONTENT -->
+
+    <!-- CONTENT END -->
+    <div></div>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
