--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
   </head>
   <body>
     <!-- NABVAR -->
-    <div class="content-navbar">
-      <ul class="ul-navbar">
-        <li class="li-navbar">
-          <a href="">Home</a>
-        </li>
-      </ul>
-
-    </div>
+    <nav class="navbar">
+      <div class="navbar-container">
+       
+      </div>
+    </nav>
     <!-- NAVBAR END -->
 
     <!-- CCONTENT -->
