--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Desa</title>
+    <title>Website Desa Pete </title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -19,6 +19,12 @@
 
     <!-- CONTENT END -->
     <div></div>
+
+       <!-- FOOTER -->
+       <footer>
+        <p>© 2025 Desa Pete | Dibuat oleh </p>
+      </footer>
+  
 
     <script src="js/script.js"></script>
   </body>
