--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- NABVAR -->
-    <nav class="navbar">
-      <div class="navbar-container">
-       
+     <!-- NABVAR -->
+     <div class="navbar-container">
+        <!-- logo desa -->
+        <div class="logo">
+          <img src="img/logo.png" />
+          <h2>Desa Durian Runtuh</h2>
+          <p>Kabupaten Mojokerto</p>
+        </div>
+        <ul class="ul-navbar">
+          <li class="li-navbar">
+              <a href="#">HOME</a>
+          </li>
+          <li class="ul-navbar">
+              <a href="#">TENTANG KAMI</a>
+          </li>
+          <li class="ul-navbar">
+              <a href="#">INFOGRAFIS</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- NAVBAR END -->
+      <!-- NAVBAR END -->
 
     <!-- CCONTENT -->
 
