--- a/FrontEnd/infografis.html
+++ b/FrontEnd/infografis.html
@@ -83,10 +83,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link active">Services</a>
-                        <a href="packages.html" class="nav-item nav-link">Packages</a>
+                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
+                        <a href="services.html" class="nav-item nav-link">Infografis</a>
+                        <a href="packages.html" class="nav-item nav-link">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
