--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -270,7 +270,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3">
+                    <!-- <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Company</h4>
                             <a href="index.html" class="nav-item nav-link active">Home</a>
@@ -294,7 +294,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
