--- a/FrontEnd/packages.html
+++ b/FrontEnd/packages.html
@@ -83,10 +83,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link">Infografis</a>
-                        <a href="packages.html" class="nav-item nav-link">Maps</a>
+                        <a href="packages.html" class="nav-item nav-link active ">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -112,11 +112,11 @@
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
                 <h3 class="text-white display-3 mb-4">Maps</h1>
-                <ol class="breadcrumb justify-content-center mb-0">
+                <!-- <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Pages</a></li>
                     <li class="breadcrumb-item active text-white">Packages</li>
-                </ol>    
+                </ol>     -->
             </div>
         </div>
         <!-- Header End -->
