--- a/FrontEnd/infografis.html
+++ b/FrontEnd/infografis.html
@@ -96,7 +96,7 @@
                         <a href="about.html" class="nav-item nav-link ">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link active">Infografis</a>
                         <a href="packages.html" class="nav-item nav-link">Maps</a>
-                        <a href="blog.html" class="nav-item nav-link">Blog</a>
+                        <a href="blog.html" class="nav-item nav-link">Berita</a>
                     </div>
             </nav>
         </div>
