--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -112,15 +112,14 @@
             <div class="container py-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5">
-                        <div class="h-100" style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">
-                            <img src="img/tentang-kami.jpg" class="img-fluid w-100 h-100" alt="">
+                        <div class="h-100" >
+                            <img src="img/logokab.png" class="img-fluid" style="width: 400px; height: auto; margin-left: 100px;" alt="">
                         </div>
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
-                        <h5 class="section-about-title pe-3">Tentang Kami</h5>
-                        <h1 class="mb-4"> Perkenalkan <span class="text-primary">Desa Pete</span></h1>
-                        <p class="mb-4">Pete adalah sebuah desa, atau wilayah administratif tingkat IV setingkat desa di Kecamatan Tigaraksa, Kabupaten Tangerang, Provinsi Banten</p>
-                        <p class="mb-4">Secara geografis, Desa Pete berbatasan dengan Desa Pematang di sebelah utara, Desa Pasir Nangka di sebelah timur, Desa Jengjing dan Desa Munjul di sebelah selatan, serta Desa Tegal Sari di sebelah barat. Desa ini terletak sekitar 2,5 km sebelah timur dari ibu kota Kecamatan Tigaraksa dan 2 km dari ibu kota Kabupaten Tangerang</p>
+                        <h5 class="section-about-title pe-3">Sejarah</h5>
+                        <h1 class="mb-4" class="text-primary">Desa Pete</h1>
+                        <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ducimus cum ullam quod aspernatur aut iusto aliquam veritatis, quae mollitia tempora explicabo similique modi impedit odit saepe debitis. Nostrum, eos.</p>
                         
                         <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Detail</a>
                     </div>
@@ -137,8 +136,8 @@
         <div class="container-fluid destination py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                    <h5 class="section-title px-3">Kegiatan</h5>
-                    <h1 class="mb-0">Desa Pete</h1>
+                    <h5 class="section-title px-3">Galeri</h5>
+                    <h1 class="mb-0">Kegiatan</h1>
                 </div>
                 <div class="tab-class text-center">
                     <ul class="nav nav-pills d-inline-flex justify-content-center mb-5">
@@ -184,7 +183,7 @@
                                             <div class="destination-img">
                                                 <img class="img-fluid rounded w-100" src="img/destination-1.jpg" alt="Rapat Koordinasi" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
-                                                    <a href="#" class="btn btn-primary text-white rounded-pill border py-2 px-3">6 Photos</a>
+                                                    <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">6 Photos</a>                                                       
                                                     <h4 class="text-white mb-2 mt-3">Rapat Koordinasi</h4>
                                                     <a href="#galleryModal" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
@@ -231,7 +230,7 @@
                                             <div class="destination-img">
                                                 <img class="img-fluid rounded w-100" src="img/destination-2.jpg" alt="Posyandu" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
-                                                    <a href="#" class="btn btn-primary text-white rounded-pill border py-2 px-3">2 Photos</a>
+                                                    <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">2 Photos</a>
                                                     <h4 class="text-white mb-2 mt-3">Posyandu</h4>
                                                     <a href="#galleryModal2" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal2">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
@@ -265,7 +264,7 @@
                                             <div class="destination-img">
                                                 <img class="img-fluid rounded w-100" src="img/destination-3.jpg" alt="Ulang Tahun Desa" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
-                                                    <a href="#" class="btn btn-primary text-white rounded-pill border py-2 px-3">4 Photos</a>
+                                                    <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">4 Photos</a>
                                                     <h4 class="text-white mb-2 mt-3">Ulang Tahun Desa</h4>
                                                     <a href="#galleryModal3" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal3">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
@@ -305,7 +304,7 @@
                                             <div class="destination-img">
                                                 <img class="img-fluid rounded w-100" src="img/destination-8.jpg" alt="Kesehatan" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
-                                                    <a href="#" class="btn btn-primary text-white rounded-pill border py-2 px-3">6 Photos</a>
+                                                    <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">6 Photos</a>
                                                     <h4 class="text-white mb-2 mt-3">Kesehatan</h4>
                                                     <a href="#galleryModal4" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal4">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
@@ -319,7 +318,7 @@
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="galleryModalLabel">Galeri Rapat Koordinasi</h5>
+                                                <h5 class="modal-title" id="galleryModalLabel">Galeri Kesehatan</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
@@ -353,7 +352,7 @@
                                     <div class="destination-img h-100">
                                         <img class="img-fluid rounded w-100 h-100" src="img/destination-9.jpg" style="object-fit: cover; min-height: 300px;" alt="lomba" data-bs-toggle="modal">
                                         <div class="destination-overlay p-4 text-start">
-                                            <a href="#" class="btn btn-primary text-white rounded-pill border py-2 px-3">6 Photos</a>
+                                            <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">6 Photos</a>
                                             <h4 class="text-white mb-2 mt-3">Lomba</h4>
                                             <a href="#galleryModal5" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal5">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                             </a>
