--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,7 +67,7 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link">Infografis</a>
-                        <a href="packages.html" class="nav-item nav-link">Maps</a>
+                        <a href="maps.html" class="nav-item nav-link">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Berita</a>
                     </div>
             </nav>
