--- a/FrontEnd/infografis.html
+++ b/FrontEnd/infografis.html
@@ -95,7 +95,7 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link ">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link active">Infografis</a>
-                        <a href="packages.html" class="nav-item nav-link">Maps</a>
+                        <a href="maps.html" class="nav-item nav-link">Maps</a>
                         <a href="blog.html" class="nav-item nav-link">Berita</a>
                     </div>
             </nav>
