--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -123,9 +123,46 @@
         </div>
         <!-- About End -->
 
-       <!-- Services Start -->
-       
-        <!-- Services End -->
+       <!-- Highlight Start -->
+       <div class="mx-auto text-center mb-5" style="max-width: 900px;">
+        <h5 class="section-title px-3">Highlight</h5>
+        <h1 class="mb-0">Berita Terbaru Desa Pete</h1>
+    </div>
+       <div class="containerBerita">
+        <div class="cardBerita">
+            <img src="img/image1.jpg" alt="Gambar">
+            <div class="card-body">
+                <h5>Judul 1</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, iste quis? Ut quod</p>
+            </div>
+            <div class="card-footer">
+                <a href="#">Lihat Detail</a>
+            </div>
+        </div>
+
+        <div class="cardBerita">
+            <img src="img/image2.jpg" alt="Gambar">
+            <div class="card-body">
+                <h5>Judul 2</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur itaque</p>
+            </div>
+            <div class="card-footer">
+                <a href="#">Lihat Detail</a>
+            </div>
+        </div>
+
+        <div class="cardBerita">
+            <img src="img/image3.jpg" alt="Gambar">
+            <div class="card-body">
+                <h5>Judul 3</h5>
+                <p>Deskripsi ini cukup panjang, mungkin lebih panjang dari yang lain.</p>
+            </div>
+            <div class="card-footer">
+                <a href="#">Lihat Detail</a>
+            </div>
+        </div>
+    </div>
+        <!-- Highlight End -->
 
         <!-- Kegiatan Start -->
         <div class="container-fluid destination py-5">
