--- a/FrontEnd/berita.html
+++ b/FrontEnd/berita.html
@@ -112,7 +112,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Read More</a>
+                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                             <svg width="18" height="18">
                                 <use xlink:href="#left" />
                             </svg>
-                            <span class="arrow-text">Previous</span> 
+                            <span class="arrow-text">Kembali</span> 
                         </div>
                         
                         <div class="pagination-number">1</div>
